# dataclass_array

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
dataclass_array/: __init__.py  array_dataclass.py  array_dataclass_test.py  conftest.py  field_utils.py  import_test.py  ops.py  shape_parsing.py  shape_parsing_test.py  testing.py  type_parsing.py  type_parsing_test.py  typing.py  vectorization.py  vectorization_test.py
dataclass_array/memory/: questions.md
dataclass_array/memory/agents_rules/: fix_the_process.md
dataclass_array/memory/agents_rules/feature-design/: SKILL.md
dataclass_array/memory/design/: 2026-03-25_dynamic_workspace_isolation.md  2026-03-26-sidecar-database-abstraction-v3.md  2026-03-26-sidecar-database-abstraction.md  2026-03-26-sidecar-database-design.md  2026-03-27-sidecar-database-abstraction-v4.md  2026-03-28-gateway-v2-abstractions.md  2026-03-28-gateway-v2-redesign.md  2026-03-30-plugin-testing-design.md  2026-04-01-gateway-graceful-restart.md  2026-04-01-streaming-rpc-investigation.md  2026-04-01-streaming-rpc-nginx-caddy.md  2026-04-02-drag-drop-design-v0.md  2026-04-02-drag-drop-design.md  2026-04-02-native-conversation-pane-v2.md  2026-04-02-native-conversation-pane.md  2026-04-02-sse-todos-v2.md  2026-04-02-sse-todos.md
dataclass_array/memory/design/docs/: architecture.md  namespace.md  routing_flows.md
dataclass_array/memory/design/gateway-design/: 2026-03-24-gateway-integration-testing.md  2026-03-24-gateway-responsibility-matrix.md  (+9 more)
dataclass_array/memory/evening/: README.md
dataclass_array/memory/research/: cross-level-pattern-recognition.md  cross-level-trigger-analysis.md  self-sufficiency-analysis-honest.md  self-sufficiency-analysis.md
dataclass_array/memory/rules/: AGENTS.md
dataclass_array/utils/: file_utils.py  inspect_utils.py  inspect_utils_test.py  np_utils.py  np_utils_test.py  py_utils.py  tree_utils.py  tree_utils_test.py
docs/: conf.py  index.md
(+95 files in other folders)
