[project]
name = "dataclass_array"
description = "Dataclasses that behave like numpy arrays (with indexing, slicing, vectorization)."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "dataclass_array team", email="dataclass_array@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dataclass", "dataclasses", "numpy", "jax", "tensorflow", "array"]

# pip dependencies of the project
dependencies = [
    "einops",
    "etils[edc,enp,epath,epy,etree]",
    "lark",
    "numpy",
    "typing_extensions",
]

# This is set automatically by flit using `dataclass_array.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/dataclass_array"
repository = "https://github.com/google-research/dataclass_array"
documentation = "https://dataclass-array.readthedocs.io"
changelog = "https://github.com/google-research/dataclass_array/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
    # Lazy deps
    "chex",
    "jax[cpu]",
    "tf-nightly",
    "torch",
]
docs = [
    "sphinx-apitree[ext]",
    "dataclass_array[dev]",  # Install lazy deps
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
